clusters/titania/apps/homarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
  name: homarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: homarr
      app.kubernetes.io/name: homarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/name: homarr
    spec:
      containers:
      - image: ghcr.io/homarr-labs/homarr:v1.21.0
        imagePullPolicy: IfNotPresent
        name: homarr
        volumeMounts:
        - name: data
          mountPath: /appdata
        ports:
        - containerPort: 7575
          name: http
          protocol: TCP
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homarr-data
