clusters/titania/apps/homarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
    app.kubernetes.io/service: homarr
  name: homarr
spec:
  ports:
  - name: http
    port: 7575
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
  type: ClusterIP
